# carnet_digital_backend

./: app.py  extensions.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  carga_masiva.py  socios.py
controllers/: partners_controller.py
domain/: deudas.py  socio.py
migrations/versions/: 27cb6c37d3f2_unificar_en_una_sola_tabla.py  3a2cd332113a_inicializando_base_de_datos_en_railway.py  3c359fbf06e1_queda_una_sola_tabla_en_server.py  a536f94a5f62_unificar_en_una_sola_tabla_2.py
schemas/: deudas_schema.py  resumen_deuda.py  socio_schema.py
services/: db_service.py  deuda_socio_service.py  socios_service.py
tools/: add_data.py  clientes.xlsx  deudas.xlsx  prueba.py
